spring-music-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-music-service
  namespace: sm-inmemory
spec:
  type: LoadBalancer
  selector:
    app: spring-music
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
---
